@@ -81,6 +81,9 @@ USER VISIBLE CHANGES
    o    The loc argument of setkey has been removed. This wasn't very
         useful and didn't warrant a period of deprecation.
         
+   o    datatable.alloccol has been removed. That warning is now
+        controlled by datatable.verbose=TRUE. One option is easer.
+        
 
         *********************************************
         **                                         **
